Fixed navbar icon overflow

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -196,7 +196,7 @@ nav {
 
 .navbar-brand-text {
   // @media (min-width: 575.98px) {
-    overflow-x: hidden;
+    overflow: hidden;
   // }
   max-width: 25px;
   display: inline-block;
